# doe-control

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
doe-control-admin/: Cargo.toml
doe-control-admin/src/: main.rs
doe-control-admin/src-tauri/: Cargo.toml  tauri.conf.json
doe-control-admin/src-tauri/src/: main.rs
doe-control-client/: Cargo.toml  Trunk.toml
doe-control-client/src/: app.rs  main.rs
doe-control-client/src-tauri/: Cargo.toml  tauri.conf.json
doe-control-client/src-tauri/capabilities/: default.json
doe-control-client/src-tauri/src/: lib.rs  main.rs
doe-control-server/: .env  .gitignore  Cargo.toml  package-lock.json  package.json
doe-control-server/assets/css/: main.css
doe-control-server/migrations/: 20250704055251_initial.sql
doe-control-server/src/: main.rs
doe-control-server/src/extractors/: cookie_jar.rs  cookie_parsing_error.rs  mod.rs
doe-control-server/templates/: base.html  greet2.html  login.html
